Oct 1:
    * Changes from the September 30th build 9.0.2.36086 are included.
    * Conduits are set to rank 7

Sep 23:
    * APL optimizations for DoTs, AoE, CD timings, and Kindred Spirits
    * Further optimization may be possible to the APL - if you discover an improvement, please submit a report
    * Add full enchants to the base profile
    * Change base profile race to Troll

Sep 18:
    * Changes from the September 17th build 9.0.2.35938 are included.
        * Lunar Eclipse now grants 20% crit to Starfire
        * Soul of the Forest doubles Starfire splash damage
        * Sunfire/Moonfire damage increased by 20%
        * Mastery nerfed by ~21%
        * Kindreds Spirits is now off the GCD
        * Celestial Alignment/Incarnation nerfed to 10% haste
        * Feast of Gluttonous Hedonism nerfed from 72 Int to 20 Int
    * Further optimization may be possible to the APL. If you discover an improvement, please submit a report.
    * Any changes to spell selection for Convoke the Spirits remains to be investigated.
    * Add trinkets from Sire Denathrius to the base profile.

Sep 13:
    * Add '1T Move' selection for approximation of random light movement.
    * Add '1T Move' events to the 'Dungeon' script
    * Base profile updated with:
        * All items are from Mythic Castle Nathira, except for placeholder trinkets
        * Full 6 mastery gems are socketted

Sep 11:
    * The following consumables are used:
        * Celestial Guidance weapon enchant
        * Feast of Gluttonous Hedonism
        * Flask of Spectral Power
        * Potion of Sectral Intellect

Sep 9: 
    * Changes from the September 2nd build 9.0.1.35755 are included.
    * Further optimization may be possible to the APL. If you discover an improvement, please submit a report.
    * Any changes to spell selection for Convoke the Spirits remains to be investigated.
    * All profiles now include 3 conduits: the covenant one (except kyrian), Fury of the Skies, and Precise Alignment.